k8s/base/patient-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-api
  labels:
    app.kubernetes.io/name: patient-api
spec:
  selector:
    app.kubernetes.io/name: patient-api
  ports:
    - name: http
      port: 80
      targetPort: http
